--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="vendor/bootstrap-grid.css">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
@@ -21,6 +22,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#home">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -62,6 +64,66 @@
   </header>
 
   <div id="pages">
+
+    <section id="home">
+      <div id="home-page" class="tab home-page container">
+        <div class="wrapper row photos">
+          <div class="photo-1">
+            <p>Order Online</p>
+          </div>
+          <div class="photo-2">
+            <p>Book a Table</p>
+          </div>
+        </div>
+        <div class="wrapper row hours">
+          <p>Opening Hours:<br>Tue-Sun, 12PM-12AM</p>
+        </div>
+        <div class="row wrapper-quotes">
+          <div class="photo-3">
+          </div>
+          <div class="quotes active">
+            <h3>Amazing Service!</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+            <p>- Margaret Osborne</p>
+          </div>
+          <div class="quotes">
+            <h3>Tasty pizza!</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+            <p>- Margaret Osborne</p>
+          </div>
+          <div class="quotes">
+            <h3>Fast Delivery!</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
+            <p>- Margaret Osborne</p>
+          </div>
+        </div>
+        <div class="row dots">
+          <div class="dot active">
+          </div>
+          <div class="dot">
+          </div>
+          <div class="dot">
+          </div>
+        </div>
+        <div class="row wrapper gallery">
+          <div class="photo-4">
+          </div>
+          <div class="photo-5">
+          </div>
+          <div class="photo-6">
+          </div>
+        </div>
+        <div class="row wrapper gallery">
+          <div class="photo-7">
+          </div>
+          <div class="photo-8">
+          </div>
+          <div class="photo-9">
+          </div>
+        </div>
+      </div>
+    </section>
+
   <section id="order">
     <div id="product-list" class="product-list container"></div>
   </section>
@@ -247,5 +309,6 @@
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
+  <script src="js/components/Home.js" type="module"></script>
 </body>
 </html>
