Add styles to home page

--- a/src/index.html
+++ b/src/index.html
@@ -70,56 +70,86 @@
         <div class="wrapper row photos">
           <div class="photo-1">
             <p>Order Online</p>
+            <p>Delicious food delivered to your door</p>
           </div>
           <div class="photo-2">
             <p>Book a Table</p>
+            <p>Delicious food delivered to your door</p>
           </div>
         </div>
-        <div class="wrapper row hours">
-          <p>Opening Hours:<br>Tue-Sun, 12PM-12AM</p>
+        <div class="row hours">
+          <p>Opening Hours:</p>
+          <p>Tue-Sun, 12PM-12AM</p>
         </div>
         <div class="row wrapper-quotes">
           <div class="photo-3">
           </div>
-          <div class="quotes active">
+          <div id="quote-1" class="quotes active">
             <h3>Amazing Service!</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
             <p>- Margaret Osborne</p>
           </div>
-          <div class="quotes">
+          <div id="quote-2" class="quotes">
             <h3>Tasty pizza!</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
             <p>- Margaret Osborne</p>
           </div>
-          <div class="quotes">
+          <div id="quote-3" class="quotes">
             <h3>Fast Delivery!</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam egestas viverra tortor, eu ullamcorper dui imperdiet nec. Nunc sed dolor at elit lobortis sodales.</p>
             <p>- Margaret Osborne</p>
           </div>
         </div>
         <div class="row dots">
-          <div class="dot active">
+          <div id="dot-1" class="dot active">
           </div>
-          <div class="dot">
+          <div id="dot-2" class="dot">
           </div>
-          <div class="dot">
-          </div>
-        </div>
-        <div class="row wrapper gallery">
-          <div class="photo-4">
-          </div>
-          <div class="photo-5">
-          </div>
-          <div class="photo-6">
+          <div id="dot-3" class="dot">
           </div>
         </div>
         <div class="row wrapper gallery">
-          <div class="photo-7">
+          <div class="photo-4 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
           </div>
-          <div class="photo-8">
+          <div class="photo-5 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
           </div>
-          <div class="photo-9">
+          <div class="photo-6 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
           </div>
+        </div>
+        <div class="row wrapper gallery">
+          <div class="photo-7 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
+          </div>
+          <div class="photo-8 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
+          </div>
+          <div class="photo-9 photo">
+            <div class="icons">
+              <a href="#"><i class="fas fa-heart"></i></a>
+              <a href="#"><i class="fas fa-share-alt"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="insta">
+          <a href="#">View more on instagram</a>
         </div>
       </div>
     </section>
