Put icons out of photos to avoid brightness issues

--- a/src/index.html
+++ b/src/index.html
@@ -110,42 +110,42 @@
         </div>
         <div class="row wrapper gallery">
           <div class="photo-4 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
           </div>
           <div class="photo-5 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
           </div>
           <div class="photo-6 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
+          </div>
+          <div class="icons icons-4">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+          <div class="icons icons-5">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+          <div class="icons icons-6">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>
         <div class="row wrapper gallery">
           <div class="photo-7 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
           </div>
           <div class="photo-8 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
           </div>
           <div class="photo-9 photo">
-            <div class="icons">
-              <a href="#"><i class="fas fa-heart"></i></a>
-              <a href="#"><i class="fas fa-share-alt"></i></a>
-            </div>
+          </div>
+          <div class="icons icons-7">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+          <div class="icons icons-8">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
+          </div>
+          <div class="icons icons-9">
+            <a href="#"><i class="fas fa-heart"></i></a>
+            <a href="#"><i class="fas fa-share-alt"></i></a>
           </div>
         </div>
         <div class="insta">
