--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
 
 <script id="template-booking-widget" type="text/x-handlebars-template">
   <div class="booking-widget">
-    <h2 class="page__title no-spacing">Book a table</h2>
+    <h2 class="page__title no-spacing">Book a Table</h2>
     <form class="booking-form">
       <div class="time-picker">
         <div class="date-picker">
